--- a/Slides/Lesson-05.html
+++ b/Slides/Lesson-05.html
@@ -48,35 +48,35 @@ This is a big topic which reaches deeply into important areas of computer scienc
 ## Learning Objectives
 
 1. Create base/superclasses 
-1. Use inheritance with super and extends
+1. Use inheritance with `super` and `extends`
 1. Create classes that inherit from a superclass
 </script></section><section  data-markdown><script type="text/template">
 # Inheritance 
 
 Inheritance is when you get something from your ancestors. By definition it's the act of passing property from an ancestor to a descendant. Properties can be: 
 
-- genes
-- money
-- property
+- genes - 💇‍♀️ 💇🏻‍♀️
+- money - 💰 💎
+- property - 🏡 🚗
 </script></section><section  data-markdown><script type="text/template">
 In software this could be: 
 
-- variables/properties
-- methods/functions
+- variables/properties - `'Foo' 999.999`
+- methods/functions - `function() {}`
 </script></section><section  data-markdown><script type="text/template">
-Who do you inherit from? 
+Who do _you_ inherit from? 
 
-- Your parents
-- Your grandparents
+- Your parents - 👨‍👩‍👦‍👦
+- Your grandparents - 👵🏽
 </script></section><section  data-markdown><script type="text/template">
 In software who do you inherit from?
 
-- Your parent/superclass
+- Your parent/superclass - ???
 </script></section><section  data-markdown><script type="text/template">
 ## Inheritence with JS
 
-Any class can inherit from another. You can also think of classes that inherit from another class as extensions of the other class. 
-
+Any class can inherit from another class. You can also think of classes that inherit from another class as **extensions** of the other class. So you could say one class extends another class.
+</script></section><section  data-markdown><script type="text/template">
 ```js
 class Sprite {
   constructor() {
@@ -84,18 +84,22 @@ class Sprite {
     this.y = 0
   }
 }
+
 class Ball extends Sprite {
   constructor() {
     super()
     this.radius = 10
   }
 }
+
 const ball = new Ball() // { x: 0, y: 0, radius: 10 }
 ```
 </script></section><section  data-markdown><script type="text/template">
-Calling `super()` in a subclass is like calling the constructor function in your superclass. 
+Calling `super()` in a subclass is like calling the constructor function in your **superclass**. 
 
-** You must call `super()`!**
+**You must call `super()`!** 
+
+It's how the properties in the super class get initialized!
 </script></section><section  data-markdown><script type="text/template">
 If a class takes parameters in its constructor it **must pass these to super**. 
 
@@ -106,7 +110,6 @@ class Sprite {
     this.y = 0
   }
 }
-
 class Ball extends Sprite {
   constructor(x, y, color, radius) {
     super(x, y) // Must pass parameters to super!
@@ -114,17 +117,16 @@ class Ball extends Sprite {
     this.radius = radius
   }
 }
-
 const ball = new Ball(10, 20, 'red', 30) 
 // { x: 10, y: 20, color:'red', radius: 30 }
 ```
-
+</script></section><section  data-markdown><script type="text/template">
 You must pass parameters to super. Notice the constructor takes these parameters, calling super is like calling the constructor of the superclass. 
 </script></section><section  data-markdown><script type="text/template">
 # Inheritance Challenges
 
-**Challenge 1**: many of the classes you created for Break Out share some of the sample properties. Moving these to a super class would keep them in one locaiton that could be shared, edited, and make it easier to reason about. This would make your code DRY. 
-
+**Challenge 1**: many of the classes you created for Break Out share some of the same properties. Moving these to a super class would keep them in one locaiton that could be shared, edited, and make it easier to reason about. This would make your code DRY. 
+</script></section><section  data-markdown><script type="text/template">
 All of these classes: 
 
 - `Ball`
@@ -132,16 +134,17 @@ All of these classes:
 - `Brick`
 - `Lives`
 - `Score` 
-
+</script></section><section  data-markdown><script type="text/template">
 Share these properties: 
 
 - `x`
 - `y`
+</script></section><section  data-markdown><script type="text/template">
+Sprites represent an object on the screen. They can all use these methods:  
 
-While they may not all use it these could all also share this method: 
-
-- `move()`
-
+- `move(x, y)`
+- `render(ctx)`
+</script></section><section  data-markdown><script type="text/template">
 Your goal with this challenge is to define a base class, let's call it Sprite. 
 
 Here is some starter code: 
@@ -162,11 +165,30 @@ class Ball extends Sprite {
   }
 }
 ```
+</script></section><section  data-markdown><script type="text/template">
+You may have to modify this to include other properties your classes might support. 
 
-You may have to modify this to include other properties your classes might support. In this code sample the `Sprite` class supports the `x` and `y` properties and the `Ball` class takes `x`, `y`, `color`, and `radius`.
+In this code sample the **`Sprite`** class supports the **`x`** and **`y`** properties and the **`Ball`** class adds **`color`**, and **`radius`**.
 
-Notice that Ball passes `x` and `y` through `super(x, y)` to it's super classes `Sprite`. 
+The Ball class is repsonsible for passing **`x`** and **`y`** to the super class. 
+</script></section><section  data-markdown><script type="text/template">
+```js
+class Sprite {
+  constructor(x, y) {
+    this.x = 0
+    this.y = 0
+  }
+}
 
+class Ball extends Sprite {
+  constructor(x, y, color, radius) {
+    super(x, y) // Must pass parameters to super!
+    this.color = color
+    this.radius = radius
+  }
+}
+```
+</script></section><section  data-markdown><script type="text/template">
 All of these classes should extend the new `Sprite` class. 
 
 - `Ball`
@@ -174,16 +196,16 @@ All of these classes should extend the new `Sprite` class.
 - `Brick`
 - `Lives`
 - `Score`
-
+</script></section><section  data-markdown><script type="text/template">
 **Challenge 2**: Some of the classes draw themselves with the same code. 
 
 - `Paddle`
 - `Brick`
-
+</script></section><section  data-markdown><script type="text/template">
 Both of these classes draw as Rectangles willed with a color. You can give the `Sprite` class a `render(ctx)` method. 
 
 Doing this will allow any class that extends `Sprite` to use `render()` this method. 
-
+</script></section><section  data-markdown><script type="text/template">
 Classes that draw themselves differently:
 
 - `Ball`
@@ -191,6 +213,44 @@ Classes that draw themselves differently:
 - `Score`
 
 Will define their own `render()` which will override the render method defined in Sprite.
+</script></section><section  data-markdown><script type="text/template">
+To render itself as a rectangle a Sprite should have a width and a height. 
+
+```JS
+class Sprite {
+  constructor(x, y, width, height) {
+    this.x = 0
+    this.y = 0
+  }
+
+  render(ctx) {
+    ctx.beginPath();
+    ctx.rect(this.x, this.y, this.width, this.height);
+    ctx.fillStyle = this.color;
+    ctx.fill();
+  }
+}
+```
+</script></section><section  data-markdown><script type="text/template">
+A ball could render itself as a circle by **overriding** the `render()` method.
+
+```JS
+class Ball extends Sprite {
+  constructor(x, y, radius = 10, color = 'red') {
+    super(x, y, radius * 2, radius * 2)
+    this.radius = radius
+    ...
+  }
+
+  render(ctx) {
+    ctx.beginPath();
+    ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+    ctx.fillStyle = this.color;
+    ctx.fill();
+    ctx.closePath();
+  }
+}
+```
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="#087CB8" -->
 ## BREAK
