--- a/Slides/Lesson-06.html
+++ b/Slides/Lesson-06.html
@@ -27,7 +27,7 @@
 ## Minute-by-Minute
 
 | **Elapsed** | **Time** | **Activity** |
-| ----------- | --------- | ------------ |
+| ----------- | -------- | ------------ |
 | 0:05 | 0:05 | admin |
 | 0:05 | 0:10 | [Overview: Bundling](#overview) |
 | 0:05 | 0:15 | [Learning Objectives](#learning-objectives) |
@@ -76,12 +76,26 @@ What does bundling do?
 Bundling processes your sources file and produces new files.
 </script></section><section  data-markdown><script type="text/template">
 **What types of processing?**
+</script></section><section  data-markdown><script type="text/template">
+- **minify** - 🗜
 
-- **minify** - reduces file size by removing unnecessary characters
-- **uglify** - renames elements to obfuscate code and reduce file size again
-- **Compile TypeScript** - Converts .ts files into .js files
-- **Compatibility** - Convert ES6 JS into JS that is compatible with older browsers
-- **bundling** - combining all .js files into a single bundle.js file
+reduces file size by removing unnecessary characters: 
+</script></section><section  data-markdown><script type="text/template">
+- **uglify** - 🙀
+
+renames elements to obfuscate code and reduce file size
+</script></section><section  data-markdown><script type="text/template">
+- **Compile TypeScript** - 🦆 →  🦢
+
+Converts .ts files into .js files
+</script></section><section  data-markdown><script type="text/template">
+- **Compatibility** - 🔩
+
+Convert ES6 JS into JS that is compatible with older browsers
+</script></section><section  data-markdown><script type="text/template">
+- **bundling** - 🏀🏓🧱 → 📦
+
+combining all .js files into a single bundle.js file
 </script></section><section  data-markdown><script type="text/template">
 Try it out:
 
@@ -93,7 +107,11 @@ Read more about these: https://blog.logrocket.com/uglify-vs-babel-minify-vs-ters
 </script></section><section  data-markdown><script type="text/template">
 ## Why call it bundling? 
 </script></section><section  data-markdown><script type="text/template">
-Another effect of the bundler is that it combines multiple .js files into a single .js file. This provides an advantage when loading projects by reducing the number of streams your page requires to load itself. 
+Another effect of the bundler is that it combines multiple .js files into a single .js file. 
+</script></section><section  data-markdown><script type="text/template">
+This provides an advantage when loading projects by reducing the number of streams your page requires to load itself. 
+
+Loading fewer files is faster.
 </script></section><section  data-markdown><script type="text/template">
 Each file is a separate stream. A browser has to provide overhead and manage each stream. More streams require more work, memory, and CPU. 
 </script></section><section  data-markdown><script type="text/template">
@@ -109,7 +127,7 @@ What did it do?
 </script></section><section  data-markdown><script type="text/template">
 The bundling process will require npm. Let's take a look at npm. 
 </script></section><section  data-markdown><script type="text/template">
-You've probably used npm before but have you ever thought about what npm is? Here is how npm describes itself. 
+You may have used npm before but have you ever thought about what npm is? Here is how npm describes itself. 
 </script></section><section  data-markdown><script type="text/template">
 > npm is the world’s largest software registry. Open-source developers from every continent use npm to share and borrow packages and many organizations use npm to manage private development as well.
 </script></section><section  data-markdown><script type="text/template">
@@ -146,10 +164,10 @@ Make the following folders:
 </script></section><section  data-markdown><script type="text/template">
 Arrange your files. You should already have some of the files. 
 
-- src/index.js (this is your source code for your break out game)
-- dist/index.html (this is the HTML file for your break out game)
-- package.json (this should have been created in the previous step)
-- webpack.config.json (make this file now you will add code to it later)
+- src/index.js (Code you wrote)
+- dist/index.html (Code compiled by webpack)
+- package.json
+- webpack.config.json 
 </script></section><section  data-markdown><script type="text/template">
 In the end your directory will look like this:
 
@@ -162,15 +180,19 @@ In the end your directory will look like this:
   |- index.html
 ```
 </script></section><section  data-markdown><script type="text/template">
-With this new arrangement, your index.html will now need to load bundle.js. Find the script tag and point it to the bundle.js. 
+Edit index.html. The script tag shoould point to `bundle.js`. 
 
 `<script src="bundle.js">__SCRIPT_END__`
+
+`bundle.js` doesn't exist yet...
 </script></section><section  data-markdown><script type="text/template">
-Notice we haven't created bundle.js. This file will be created in the next step by webpack. This will be the compiled, minified, uglified file built from your JS code and code you might have imported from other libs. 
+Notice we haven't created bundle.js. This file will be created in the next step by webpack. This will be the compiled, minified, and uglified file built from your JS code and code you might have imported from other libs. 
 </script></section><section  data-markdown><script type="text/template">
-## Webpack config 
+## webpack.config.js
 </script></section><section  data-markdown><script type="text/template">
-Webpack is an industry-standard tool. You will see this tool in the future expects to work with it. It does many things. The webpack.config.js file configures webpack, it is written in JavaScript. 
+Webpack is an industry-standard tool. You will see this tool in the future, expect to work with it. 
+
+The webpack.config.js file configures webpack, it is written in JavaScript. 
 </script></section><section  data-markdown><script type="text/template">
 Copy the code below and paste it into your webpack.config.js. 
 
@@ -203,13 +225,12 @@ edit package.json
 
 ```
 {
- ...
- "scripts": {
- "test": "echo \"Error: no test specified\" && exit 1"
- "develop": "webpack --mode development --watch",
- "build": "webpack --mode production"
- },
- ...
+  ...
+  "scripts": {
+    "develop": "webpack --mode development --watch",
+    "build": "webpack --mode production"
+  },
+  ...
 }
  ```
 </script></section><section  data-markdown><script type="text/template">
